--- a/WTA_Earnings_tika.ipynb
+++ b/WTA_Earnings_tika.ipynb
@@ -39,47 +39,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(raw.keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "grateful-church",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(raw['metadata'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "processed-basket",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(raw['status'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "twelve-twelve",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
+    "#print(raw.keys())\n",
+    "#print(raw['metadata'])\n",
+    "#print(raw['status'])\n",
     "text = raw['content'].split('\\n')\n",
-    "print('\\n'.join(text))"
+    "#print('\\n'.join(text))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "stuck-oliver",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import re\n",
@@ -92,14 +65,29 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "available-regression",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "player_earnings = []\n",
+    "player_names = []\n",
     "for line in result:\n",
-    "    res = re.search(r'(^\\d+) ([^0-9]+) ([0-9,]+)$', line)\n",
-    "    player_earnings.append(res.groups())\n",
-    "    print(res.groups())"
+    "    player = re.search(r'(^\\d+) ([^0-9]+) ([0-9,]+)$', line)\n",
+    "    #print(player.group(2))\n",
+    "    name_country = re.search(r'(^[\\w\\s\\.\\'\\(\\)-]+), ([\\w\\.\\(\\) -]+) ([A-Z]{3}?$)', player.group(2), re.UNICODE)\n",
+    "    if name_country:\n",
+    "        ; #print(name_country.groups())\n",
+    "    else:\n",
+    "        name_country = re.search(r'(^[\\w\\s\\'\\(\\)-]+), ([\\w\\.\\(\\) -]+)', player.group(2), re.UNICODE)\n",
+    "        if name_country:\n",
+    "            print(name_country.groups())\n",
+    "        else:\n",
+    "            print(player.group(2))\n",
+    "    #player_earnings.append(player.groups())\n",
+    "    #player_names.append(name_country.groups())\n",
+    "    #print(player.groups())\n",
+    "    #print(player_names.groups())"
    ]
   },
   {
