UPDATE: Enhanced parsing of the input data
Split the player field into first/last name and country.

--- a/WTA_Earnings_tika.ipynb
+++ b/WTA_Earnings_tika.ipynb
@@ -15,6 +15,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from platform import python_version\n",
+    "print(python_version())\n",
+    "\n",
     "# data_source = '../Data/All_Career_Prize_Money.pdf'\n",
     "data_source = 'https://wtafiles.wtatennis.com/pdf/rankings/All_Career_Prize_Money.pdf'"
    ]
@@ -56,6 +59,7 @@
    "outputs": [],
    "source": [
     "import re\n",
+    "# this statement selects only lines of text which contain player's earning data\n",
     "result = [line for line in text if re.search(r'^\\d+ [^0-9]+ [0-9,$]+', line)] \n",
     "print(len(result))\n",
     "print('\\n'.join(result))"
@@ -72,22 +76,25 @@
    "source": [
     "player_earnings = []\n",
     "player_names = []\n",
+    "last_name = None\n",
+    "first_name = None\n",
+    "country = None\n",
+    "\n",
     "for line in result:\n",
-    "    player = re.search(r'(^\\d+) ([^0-9]+) ([0-9,]+)$', line)\n",
-    "    #print(player.group(2))\n",
-    "    name_country = re.search(r'(^[\\w\\s\\.\\'\\(\\)-]+), ([\\w\\.\\(\\) -]+) ([A-Z]{3}?$)', player.group(2), re.UNICODE)\n",
+    "    # parse player data into groups: 1-(Rank), 2-(Last Name, First Name, Country) and 3-(Earnings)\n",
+    "    player_info = re.search(r'(^\\d+) ([^0-9]+) ([0-9,]+)$', line)\n",
+    "    # split group(2) into individual fields\n",
+    "    name_country = re.search(r'(^[\\w\\s\\.\\'\\(\\)-]+), ([\\w\\.\\(\\) -]+) ([A-Z]{3}?$)', player_info.group(2), re.UNICODE)\n",
     "    if name_country:\n",
-    "        ; #print(name_country.groups())\n",
+    "        last_name, first_name, country = name_country.groups()\n",
     "    else:\n",
-    "        name_country = re.search(r'(^[\\w\\s\\'\\(\\)-]+), ([\\w\\.\\(\\) -]+)', player.group(2), re.UNICODE)\n",
+    "        name_country = re.search(r'(^[\\w\\s\\'\\(\\)-]+), ([\\w\\.\\(\\) -]+)', player_info.group(2), re.UNICODE)\n",
     "        if name_country:\n",
-    "            print(name_country.groups())\n",
+    "            last_name, first_name= name_country.groups()\n",
+    "            country = None\n",
     "        else:\n",
-    "            print(player.group(2))\n",
-    "    #player_earnings.append(player.groups())\n",
-    "    #player_names.append(name_country.groups())\n",
-    "    #print(player.groups())\n",
-    "    #print(player_names.groups())"
+    "            print(player_info.group(2))\n",
+    "    player_earnings.append([player_info.group(1), last_name, first_name, country, player_info.group(3)])"
    ]
   },
   {
@@ -98,69 +105,10 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "df = pd.DataFrame(player_earnings, columns=['Rank', 'Player', 'Earnings'])\n",
-    "df.head(20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "passive-polish",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df = pd.DataFrame(player_earnings, columns=['Rank', 'LastName', 'FirstName', 'Country', 'Earnings'])\n",
     "df['Earnings'] = df['Earnings'].str.replace(',', '').astype(float)\n",
-    "df.head(20)"
+    "df.head(50)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "average-bubble",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "rising-cooperative",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(type(df.loc[[5], ['Player']]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "induced-wrong",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.loc[[8], ['Player']].iat[0,0]\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "phantom-phase",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "induced-bracelet",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
