--- a/WTA_Earnings_tika.ipynb
+++ b/WTA_Earnings_tika.ipynb
@@ -109,6 +109,30 @@
     "df['Earnings'] = df['Earnings'].str.replace(',', '').astype(float)\n",
     "df.head(50)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "miniature-photograph",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from IPython.core.pylabtools import figsize\n",
+    "\n",
+    "figsize(12.5, 7)\n",
+    "scatter, ax = plt.subplots()\n",
+    "ax = sns.scatterplot(x='Rank', y='Earnings', data=df.head(50))\n",
+    "#ax = sns.scatterplot(x='Rank', y='Earnings', data=df)\n",
+    "ax.set(xscale='log', yscale='log')\n",
+    "# I hate doing this: the plotting routines should pick up better ranges, but for now, I don't \n",
+    "# have a better solution to get reasonable charts.\n",
+    "ax.set_xlim([1, 12000])\n",
+    "ax.set_ylim([10000000, 100000000])\n",
+    "plt.show()\n",
+    "# P.S. This chart sucks - needs a lot of tweaking to make it useful in general"
+   ]
   }
  ],
  "metadata": {
