UPDATE: added creation of Wiki Link
Known issue: hyphenated names are not handled correctly

--- a/WTA_Earnings_tika.ipynb
+++ b/WTA_Earnings_tika.ipynb
@@ -104,16 +104,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "\n",
+    "@np.vectorize\n",
+    "def create_wiki_link(first_name, last_name):\n",
+    "    return 'https://en.wikipedia.org/wiki/' + first_name.capitalize() +'_' + last_name.capitalize()\n",
+    "\n",
     "import pandas as pd\n",
     "df = pd.DataFrame(player_earnings, columns=['Rank', 'LastName', 'FirstName', 'Country', 'Earnings'])\n",
     "df['Earnings'] = df['Earnings'].str.replace(',', '').astype(float)\n",
+    "df['WikiLink'] = create_wiki_link(df['FirstName'], df['LastName'])\n",
+    "df.to_excel('earnings.xlsx', index=False)\n",
     "df.head(50)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "miniature-photograph",
+   "id": "finite-firewall",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,6 +141,81 @@
     "plt.show()\n",
     "# P.S. This chart sucks - needs a lot of tweaking to make it useful in general"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "visible-candidate",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.replace({None:'---'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "peripheral-career",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_sum = df.groupby('Country')['Earnings'].sum()\n",
+    "df_sum.sort_values(ascending=False).head(50)\n",
+    "df_sum.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "frozen-barcelona",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_sum = df_sum.to_frame()\n",
+    "type(df_sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "printable-clone",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "australian-automation",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "box, ax = plt.subplots()\n",
+    "ax = sns.boxplot(data=df, x='Country', y='Earnings')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "selected-spread",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "box, ax = plt.subplots()\n",
+    "ax = sns.barplot(data=df_sum, y='Earnings', use_index=True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "secret-withdrawal",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
