UPDATE: Fixed capitalization

--- a/WTA_Earnings_tika.ipynb
+++ b/WTA_Earnings_tika.ipynb
@@ -108,7 +108,7 @@
     "\n",
     "@np.vectorize\n",
     "def create_wiki_link(first_name, last_name):\n",
-    "    return 'https://en.wikipedia.org/wiki/' + first_name.capitalize() +'_' + last_name.capitalize()\n",
+    "    return 'https://en.wikipedia.org/wiki/' + first_name.title() +'_' + last_name.title()\n",
     "\n",
     "import pandas as pd\n",
     "df = pd.DataFrame(player_earnings, columns=['Rank', 'LastName', 'FirstName', 'Country', 'Earnings'])\n",
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "visible-candidate",
+   "id": "healthy-bullet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "peripheral-career",
+   "id": "smart-allowance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "frozen-barcelona",
+   "id": "manufactured-webcam",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "printable-clone",
+   "id": "fitted-format",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "australian-automation",
+   "id": "balanced-emphasis",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "selected-spread",
+   "id": "confirmed-citizenship",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "secret-withdrawal",
+   "id": "based-correction",
    "metadata": {},
    "outputs": [],
    "source": []
