--- a/WTA_Wiki_Scraper.ipynb
+++ b/WTA_Wiki_Scraper.ipynb
@@ -3,13 +3,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "modern-cricket",
+   "id": "knowing-tiffany",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "#url = 'https://en.wikipedia.org/wiki/Serena_Williams'\n",
+    "url = 'https://en.wikipedia.org/wiki/Serena_Williams'\n",
     "#url = 'https://en.wikipedia.org/wiki/Venus_Williams'\n",
     "#url = 'https://en.wikipedia.org/wiki/Simona_Halep'\n",
     "#url = 'https://en.wikipedia.org/wiki/Maria_Sharapova'\n",
@@ -33,15 +33,15 @@
     "#url = 'https://en.wikipedia.org/wiki/Samantha_Stosur'\n",
     "#url = 'https://en.wikipedia.org/wiki/Jelena_Jankovic'\n",
     "\n",
-    "url = 'https://en.wikipedia.org/wiki/Iga_Swiatek'\n",
-    "url = 'https://en.wikipedia.org/wiki/Cori_Gauff'\n",
+    "#url = 'https://en.wikipedia.org/wiki/Iga_Swiatek'\n",
+    "#url = 'https://en.wikipedia.org/wiki/Cori_Gauff'\n",
     "#url = 'https://en.wikipedia.org/wiki/Emma_Raducanu'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "golden-cache",
+   "id": "temporal-subscriber",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,18 +53,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "smart-vertical",
+   "id": "refined-glory",
    "metadata": {},
    "outputs": [],
    "source": [
-    "table =  tables[0]\n",
+    "i = 0\n",
+    "while i < 5:\n",
+    "    table =  tables[i]\n",
+    "    (rows, cols) = table.shape\n",
+    "    if (rows < 10) | (cols < 2):\n",
+    "        i += 1\n",
+    "        continue\n",
+    "    else:\n",
+    "        print(i)\n",
+    "        print(table.shape)\n",
+    "        break\n",
+    "        \n",
     "table"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "progressive-final",
+   "id": "juvenile-account",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "weekly-pathology",
+   "id": "controlling-pizza",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "regular-private",
+   "id": "psychological-municipality",
    "metadata": {},
    "source": [
     "The table needs to be navigated by looping through the data frame rows and the looping needs to abort once the value 'Doubles' is encountered.  Otherwise, looping by lookup of the Attr names returns dataframes if the same attribute is found multiple times."
@@ -108,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "paperback-wyoming",
+   "id": "existing-survey",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "regional-porter",
+   "id": "extra-vessel",
    "metadata": {},
    "source": [
     "OK, got the proper subset of the data table (sub_tab), but still having problem with extracting the cell values.\n",
@@ -131,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hungarian-prescription",
+   "id": "therapeutic-conditioning",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,12 +158,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "apparent-single",
+   "id": "automatic-amplifier",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print(table.shape)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
