--- a/WTA_Earnings_tika.ipynb
+++ b/WTA_Earnings_tika.ipynb
@@ -18,8 +18,8 @@
     "from platform import python_version\n",
     "print(python_version())\n",
     "\n",
-    "# data_source = '../Data/All_Career_Prize_Money.pdf'\n",
-    "data_source = 'https://wtafiles.wtatennis.com/pdf/rankings/All_Career_Prize_Money.pdf'"
+    "data_source = './Data/All_Career_Prize_Money.pdf'\n",
+    "#data_source = 'https://wtafiles.wtatennis.com/pdf/rankings/All_Career_Prize_Money.pdf'"
    ]
   },
   {
@@ -116,6 +116,7 @@
     "df['WikiLink'] = create_wiki_link(df['FirstName'], df['LastName'])\n",
     "#df.to_excel('earnings.xlsx', index=False)\n",
     "df.to_html('earnings.html', render_links=True, index=False)\n",
+    "df.to_pickle('./Data/earnings.pickle')\n",
     "df.head(50)"
    ]
   },
@@ -146,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "altered-operation",
+   "id": "smoking-teacher",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "prompt-cancer",
+   "id": "bacterial-queensland",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "undefined-birthday",
+   "id": "solid-integrity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "informed-broadway",
+   "id": "nearby-brisbane",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,13 +192,14 @@
     "box, ax = plt.subplots()\n",
     "ax = sns.barplot(data=df_sum, y='Earnings', x=df_sum.index)\n",
     "ax.set_xticklabels(ax.get_xticklabels(), rotation=90, horizontalalignment='right')\n",
+    "ax.set_title('Earnings of all WTA players for the top 50 countries in total earnings')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fossil-arlington",
+   "id": "boxed-leeds",
    "metadata": {},
    "outputs": [],
    "source": [
