--- a/WTA_Wiki_Scraper.ipynb
+++ b/WTA_Wiki_Scraper.ipynb
@@ -3,13 +3,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "knowing-tiffany",
+   "id": "pharmaceutical-cancer",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "url = 'https://en.wikipedia.org/wiki/Serena_Williams'\n",
+    "#url = 'https://en.wikipedia.org/wiki/Asdf_Xyz'\n",
+    "#url = 'https://en.wikipedia.org/wiki/Serena_Williams'\n",
     "#url = 'https://en.wikipedia.org/wiki/Venus_Williams'\n",
     "#url = 'https://en.wikipedia.org/wiki/Simona_Halep'\n",
     "#url = 'https://en.wikipedia.org/wiki/Maria_Sharapova'\n",
@@ -35,51 +36,24 @@
     "\n",
     "#url = 'https://en.wikipedia.org/wiki/Iga_Swiatek'\n",
     "#url = 'https://en.wikipedia.org/wiki/Cori_Gauff'\n",
-    "#url = 'https://en.wikipedia.org/wiki/Emma_Raducanu'"
+    "url = 'https://en.wikipedia.org/wiki/Emma_Raducanu'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "temporal-subscriber",
+   "id": "clinical-supervision",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tables = pd.read_html(url)\n",
-    "print(type(tables))\n",
-    "print(len(tables))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "refined-glory",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "i = 0\n",
-    "while i < 5:\n",
-    "    table =  tables[i]\n",
-    "    (rows, cols) = table.shape\n",
-    "    if (rows < 10) | (cols < 2):\n",
-    "        i += 1\n",
-    "        continue\n",
-    "    else:\n",
-    "        print(i)\n",
-    "        print(table.shape)\n",
-    "        break\n",
-    "        \n",
-    "table"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "juvenile-account",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if len(table.columns) == 2:\n",
+    "try:\n",
+    "    tables = pd.read_html(url, attrs={'class': 'infobox vcard'})\n",
+    "except:\n",
+    "    print('Failed to read url ' + url)\n",
+    "\n",
+    "table = tables[0]\n",
+    "(rows, cols) = table.shape\n",
+    "if cols == 2:\n",
     "    table.columns = ['Attr', 'Value']\n",
     "else:\n",
     "    table.columns = ['Attr', 'Value', 'Extra']\n",
@@ -89,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "controlling-pizza",
+   "id": "binding-label",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "psychological-municipality",
+   "id": "binary-military",
    "metadata": {},
    "source": [
     "The table needs to be navigated by looping through the data frame rows and the looping needs to abort once the value 'Doubles' is encountered.  Otherwise, looping by lookup of the Attr names returns dataframes if the same attribute is found multiple times."
@@ -119,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "existing-survey",
+   "id": "excited-tulsa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "extra-vessel",
+   "id": "improved-sydney",
    "metadata": {},
    "source": [
     "OK, got the proper subset of the data table (sub_tab), but still having problem with extracting the cell values.\n",
@@ -142,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "therapeutic-conditioning",
+   "id": "banned-liberty",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,14 +128,6 @@
     "        row_idx = sub_tab[sub_tab['Attr'].str.contains(val, regex=True, na=False)].index[0]\n",
     "        print(sub_tab.loc[sub_tab.index[row_idx], 'Value'])\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "automatic-amplifier",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
