--- a/WTA_Wiki_Scraper.ipynb
+++ b/WTA_Wiki_Scraper.ipynb
@@ -21,7 +21,10 @@
     "    'Titles': 'Career.*titles',\n",
     "    'HighRank': 'Highest.*ranking',\n",
     "    }\n",
-    "ROW_LOOKUP"
+    "\n",
+    "BAD_URLS = []\n",
+    "\n",
+    "PLAYERS_INFO = {}"
    ]
   },
   {
@@ -90,19 +93,23 @@
    "outputs": [],
    "source": [
     "def find_data_items(sub_tab):\n",
+    "    info = {}\n",
     "    for key in ROW_LOOKUP.keys():\n",
-    "        print(key)\n",
+    "        #print(key)\n",
     "        val = ROW_LOOKUP[key]\n",
     "        #print(val)\n",
     "        if len(sub_tab[sub_tab['Attr'].str.contains(val, regex=True, na=False)]) > 0:\n",
     "            row_idx = sub_tab[sub_tab['Attr'].str.contains(val, regex=True, na=False)].index[0]\n",
-    "            print(sub_tab.loc[sub_tab.index[row_idx], 'Value'])\n"
+    "            #print(sub_tab.loc[sub_tab.index[row_idx], 'Value'])\n",
+    "            info[key] = sub_tab.loc[sub_tab.index[row_idx], 'Value']\n",
+    "\n",
+    "    return info"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "executed-eclipse",
+   "id": "selective-premises",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "electric-grounds",
+   "id": "removed-studio",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,6 +131,7 @@
     "        tables = pd.read_html(url, attrs={'class': 'infobox vcard'})\n",
     "    except:\n",
     "        print('Failed to read url ' + url)\n",
+    "        BAD_URLS.append(url)\n",
     "        return\n",
     "\n",
     "    table = tables[0]\n",
@@ -134,19 +142,35 @@
     "        table.columns = ['Attr', 'Value', 'Extra']\n",
     "\n",
     "    sub_tab = get_singles_subtable(table)\n",
-    "    find_data_items(sub_tab)"
+    "    return find_data_items(sub_tab)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "noble-title",
+   "id": "anonymous-connectivity",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from random import random\n",
+    "from time import sleep\n",
+    "\n",
     "for url in urls:\n",
     "    print(\"processing: \" + url)\n",
-    "    get_wiki_info(url)"
+    "    r = random()\n",
+    "    sleep(r)\n",
+    "    PLAYERS_INFO[url] = get_wiki_info(url)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cooked-interstate",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pi = pd.DataFrame(PLAYERS_INFO).transpose()\n",
+    "pi"
    ]
   }
  ],
