--- a/WTA_Wiki_Scraper.ipynb
+++ b/WTA_Wiki_Scraper.ipynb
@@ -8,6 +8,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import requests\n",
     "\n",
     "ROW_LOOKUP = {\n",
     "    'CountryWiki': 'Country',\n",
@@ -48,6 +49,8 @@
     "    'https://en.wikipedia.org/wiki/Svetlana_Kuznetsova',\n",
     "    'https://en.wikipedia.org/wiki/Martina_Hingis',\n",
     "    'https://en.wikipedia.org/wiki/Garbine_Muguruza',\n",
+    "    'https://en.wikipedia.org/wiki/Garbi%C3%B1e_Muguruza',\n",
+    "    'https://en.wikipedia.org/wiki/Garbi%C3%B1e_Muguruza',\n",
     "    'https://en.wikipedia.org/wiki/Kim_Clijsters',\n",
     "    'https://en.wikipedia.org/wiki/Karolina_Pliskova',\n",
     "    'https://en.wikipedia.org/wiki/Ashleigh_Barty',\n",
@@ -109,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "selective-premises",
+   "id": "compact-utility",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,13 +125,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "removed-studio",
+   "id": "continental-equality",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# using requests.get as a workaround in pandas read_html bug which doesn't work with Unicode\n",
+    "# https://github.com/pandas-dev/pandas/issues/21499\n",
+    "\n",
     "def get_wiki_info(url):\n",
     "    try:\n",
-    "        tables = pd.read_html(url, attrs={'class': 'infobox vcard'})\n",
+    "        r = requests.get(url)\n",
+    "        page = r.text\n",
+    "        tables = pd.read_html(page, attrs={'class': 'infobox vcard'})\n",
     "    except:\n",
     "        print('Failed to read url ' + url)\n",
     "        BAD_URLS.append(url)\n",
@@ -148,14 +156,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "anonymous-connectivity",
+   "id": "pressed-ending",
    "metadata": {},
    "outputs": [],
    "source": [
     "from random import random\n",
     "from time import sleep\n",
     "\n",
-    "for url in urls:\n",
+    "df = pd.read_pickle('./Data/earnings.pickle')\n",
+    "for i in range(0, len(df)):\n",
+    "    url = df.loc[df.index[i], 'WikiLink']\n",
     "    print(\"processing: \" + url)\n",
     "    r = random()\n",
     "    sleep(r)\n",
@@ -165,12 +175,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cooked-interstate",
-   "metadata": {},
+   "id": "preliminary-weekly",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "pi = pd.DataFrame(PLAYERS_INFO).transpose()\n",
     "pi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "above-monitoring",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.dtypes"
    ]
   }
  ],
